# spark-medallion-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile.airflow  LICENSE  README.md  docker-compose.yaml  init-s3.sh  pyproject.toml
.github/workflows/: ci.yml
contracts/: bronze.yml  gold_revenue_by_day.yml  silver.yml
dags/: medallion_pipeline.py  spark-pipeline.py
src/: __init__.py  main.py
src/bronze/: __init__.py  bronze.py
src/config/: __init__.py  postgres.py  spark_session.py
src/gold/: __init__.py  gold.py
src/mcp_server/: server.py
src/quality/: __init__.py  quality.py
src/silver/: __init__.py  silver.py
