[project]
name = "spark-medallion-pipeline"
version = "0.1.0"
description = "Batch ETL pipeline with PySpark and Delta Lake following the Medallion architecture"
requires-python = ">=3.11"

dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "mysql-connector-python>=9.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "poethepoet>=0.25.0",
    "pre-commit>=3.7.0",
    "pyright>=1.1.0",
]

[tool.poe.tasks]
linter-fix = "ruff format src"
check = "ruff check src && pyright src"
test = "pytest tests/ -v"
coverage = "pytest tests/ --cov=src --cov-report=term-missing"
pipeline = "python src/main.py"
infra-up = "docker compose -f docker/docker-compose.yml up -d"
infra-down = "docker compose -f docker/docker-compose.yml down"

[tool.ruff]
line-length = 88
target-version = "py311"